--- a/info.html
+++ b/info.html
@@ -137,24 +137,24 @@
                 <div class="row">
                     <div class="col-md-6">
                         <label for="passportno">Passport No.:</label>
-                        <input type="number" name="passportno" id="passportno">
+                        <input type="number" name="passportno" id="passportno" readonly>
                         <hr />
                     </div>
                     <div class="col-md-6">
                         <label for="pan_no">PAN No. :</label>
-                        <input type="number" name="pan_no" id="pan_no">
+                        <input type="number" name="pan_no" id="pan_no" readonly>
                         <hr />
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
                         <label for="bloodgrp">Blood Group :</label>
-                        <input type="text" id="bloodgrp" name="bloodgrp">
+                        <input type="text" id="bloodgrp" name="bloodgrp" readonly>
                         <hr />
                     </div>
                     <div class="col-md-6">
                         <label for="hobbies">Hobbies :</label>
-                        <input type="text" id="hobby" name="hobby">
+                        <input type="text" id="hobby" name="hobby" readonly>
                         <hr />
                     </div>
                 </div>
