Output file radio button added.

--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
                     <div class="col-md-12">
                     </div>
                 </div>
-                <hr />
                 <div class="row">
                     <div class="col-md-12">
                         <label for="residence">Residence :</label>
                         <textarea type="text" name="residence" id="residence" rows="2" required></textarea>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
                     </div>
                 </div>
                 <hr />
