--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@
                     </div>
                     <div class="col-md-6">
                         <label for="telephone">Telephone :</label>
-                        <input type="tel" name="telephone" id="telephone" pattern="[6-9]{1}[0-9]{9}" maxlength="10" onblur="validateMobile(this)"
-                        oninput="validateMobile(this)" 
-                            required>
+                        <input type="tel" name="telephone" id="telephone" pattern="[6-9]{1}[0-9]{9}" maxlength="10"
+                            onblur="validateMobile(this)" oninput="validateMobile(this)" required>
                         <hr />
 
                         <p id="telephone_error"></p>
@@ -122,48 +121,49 @@
                 <div class="row">
                     <div class="col-md-12">
                         <label for="emailid">Email ID :</label>
-                        <input type="email" name="emailid" id="emailid" required>
+                        <input type="email" name="emailid" id="emailid" onblur="validateEmail(this.value)"
+                            oninput="validateEmail(this.value)" required>
                     </div>
                 </div>
                 <hr />
-                <p id="office_error">Hello</p>
+                <p id="email_error"></p>
                 <br>
                 <div class="row">
                     <div class="col-md-6">
                         <label for="aadharno">Aadhar No. :</label>
                         <input type="text" name="aadharno" id="aadharno" pattern="[0-9]*" maxlength="12" title="Only numbers allowed
-                        ." required>
+                        ." onblur="validateAadhar(this.value)" oninput="validateAadhar(this.value)" required>
                         <hr />
 
-                        <p id="office_error">Hello</p>
+                        <p id="aadhar_error"></p>
                         <br>
                     </div>
 
                     <div class="col-md-6">
                         <label for="gstin">GSTIN :</label>
                         <input type="text" name="gstin" id="gstin" pattern="[0-9]{2}[A-Z0-9]{10}[0-9]{1}[Z]{1}[0-9]{1}"
-                            maxlength="15" required>
+                            maxlength="15" onblur="validateGST(this.value)" oninput="validateGST(this.value)" required>
                         <!-- GSTIN Format : 22 AAA09AAAZ7 1 Z 6 -->
                         <hr />
-
-                        <p id="office_error">Hello</p>
+                        <p id="gstin_error"></p>
                         <br>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
                         <label for="vehicleno">Vehicle No. :</label>
-                        <input type="text" name="vehicleno" id="vehicleno" required>
+                        <input type="text" name="vehicleno" id="vehicleno" onblur="validateVehicleNo(this.value)"
+                            oninput="validateVehicleNo(this.value)" placeholder="XX00XX0000" required>
                         <hr />
-
-                        <p id="office_error">Hello</p>
+                        <p id="vehicleno_error"></p>
                         <br>
                     </div>
                     <div class="col-md-6">
                         <label for="dlno">DL No. :</label>
-                        <input type="text" name="dlno" id="dlno" required>
+                        <input type="text" name="dlno" id="dlno" onblur="validateAllnumbers(this)"
+                            oninput="validateAllnumbers(this)" required>
                         <hr />
-                        <p id="office_error">Hello</p>
+                        <p id="dlno_error"></p>
                         <br>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                     <div class="col-md-6">
                         <label for="bank_acc">Bank A/c With :</label>
                         <input type="text" name="bank_acc" id="bank_acc" pattern="[A-Za-z]*" onblur="validateName(this)"
-                        oninput="validateName(this)" required>
+                            oninput="validateName(this)" required>
                         <hr />
 
                         <p id="bank_acc_error"></p>
@@ -179,46 +179,44 @@
                     </div>
                     <div class="col-md-6">
                         <label for="accno">Account No. :</label>
-                        <input type="number" name="accno" id="accno" required>
+                        <input type="number" name="accno" id="accno" onblur="validateAllnumbers(this)"
+                            oninput="validateAllnumbers(this)" required>
                         <hr />
-
-                        <p id="office_error">Hello</p>
+                        <p id="accno_error"></p>
                         <br>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
                         <label for="debitcardno">Debit Card No.:</label>
-                        <input type="text" name="debitcardno" id="debitcardno" pattern="[0-9]*" maxlength="16" required>
+                        <input type="text" name="debitcardno" id="debitcardno" pattern="[0-9]*" maxlength="16"
+                            onblur="validateAllnumbers(this)" oninput="validateAllnumbers(this)" required>
                         <hr />
-
-                        <p id="office_error">Hello</p>
+                        <p id="debitcardno_error"></p>
                         <br>
                     </div>
                     <div class="col-md-6">
                         <label for="creditcardno">Credit Card No. :</label>
                         <input type="text" name="creditcardno" id="creditcardno" pattern="[0-9]*" maxlength="16"
-                            required>
+                            onblur="validateAllnumbers(this)" oninput="validateAllnumbers(this)" required>
                         <hr />
-
-                        <p id="office_error">Hello</p>
+                        <p id="creditcardno_error"></p>
                         <br>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
                         <label for="passportno">Passport No.:</label>
-                        <input type="number" name="passportno" id="passportno" onblur="validateMobile(this)"
-                        oninput="validateMobile(this)" required>
+                        <input type="number" name="passportno" id="passportno" onblur="validateAllnumbers(this)"
+                            oninput="validateAllnumbers(this)" required>
                         <hr />
-
                         <p id="passportno_error"></p>
                         <br>
                     </div>
                     <div class="col-md-6">
                         <label for="pan_no">PAN No. :</label>
-                        <input type="text" name="pan_no" id="pan_no" onblur="validateMobile(this)"
-                        oninput="validateMobile(this)" required>
+                        <input type="text" name="pan_no" id="pan_no" onblur="validateAllnumbers(this)"
+                            oninput="validateAllnumbers(this)" required>
                         <hr />
 
                         <p id="pan_no_error"></p>
@@ -228,7 +226,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <label for="bloodgrp">Blood Group :</label>
-                        <select name="bloodgrp" id="bloodgrp" required>
+                        <select name="bloodgrp" id="bloodgrp" onblur="validateBloodgrp(this.value)" required>
                             <option value="" selected disabled>Select</option>
                             <option value="A+">A+</option>
                             <option value="A-">A-</option>
@@ -240,24 +238,31 @@
                             <option value="O-">O-</option>
                         </select>
                         <hr />
-
-                        <p id="office_error">Hello</p>
+                        <p id="bloodgrp_error"></p>
                         <br>
                     </div>
                     <div class="col-md-6">
                         <label for="hobbies">Hobbies :</label>
-                        <input type="checkbox" id="hobby1" name="hobby1" value="Boxing">
+                        <input type="checkbox" id="hobby1" name="hobby" value="Boxing">
                         <label for="hobby1">Boxing</label>
-                        <input type="checkbox" id="hobby2" name="hobby2" value="Dancing">
+                        <input type="checkbox" id="hobby2" name="hobby" value="Dancing">
                         <label for="hobby2">Dancing</label>
-                        <input type="checkbox" id="hobby3" name="hobby3" value="Eating">
+                        <input type="checkbox" id="hobby3" name="hobby" value="Eating">
                         <label for="hobby3">Eating</label>
-                        <hr />
 
-                        <p id="office_error">Hello</p>
+                        <!-- <input type="button"> -->
+                        <hr />
+                        <p id=" hobby_error"></p>
                         <br>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <label for="dob">Date of birth :</label>
+                        <input type="date" name="dob" id="dob" max="2005-12-31" required>
+                    </div>
+                </div>
+                <hr />
                 <div class="row">
                     <div class="col-md-12">
                         <h5>IN CASE OF EMERGENCY PLEASE NOTIFY</h5>
@@ -268,8 +273,8 @@
                         <hr style="width: 100%;" />
                         <label for="name2">Name :</label>
                         <input type="text" name="name2" id="name2" title="Only characters allowed."
-                            pattern="[a-zA-Z][a-zA-Z\s]*" onblur="validateName(this)"
-                            oninput="validateName(this)" required>
+                            pattern="[a-zA-Z][a-zA-Z\s]*" onblur="validateName(this)" oninput="validateName(this)"
+                            required>
                         <hr />
                         <p id="name2_error"></p>
                         <br>
@@ -290,9 +295,8 @@
                 <div class="row">
                     <div class="col-md-6">
                         <label for="telephone2">Telephone :</label>
-                        <input type="tel" name="telephone2" id="telephone2" pattern="[6-9]{1}[0-9]{9}" maxlength="10" onblur="validateMobile(this)"
-                        oninput="validateMobile(this)"
-                            required>
+                        <input type="tel" name="telephone2" id="telephone2" pattern="[6-9]{1}[0-9]{9}" maxlength="10"
+                            onblur="validateMobile(this)" oninput="validateMobile(this)" required>
                         <hr />
                         <p id="telephone2_error"></p>
                         <br>
@@ -300,8 +304,8 @@
                     <div class="col-md-6">
                         <label for="relation">Relation :</label>
                         <input type="text" name="relation" id="relation" title="Only characters allowed."
-                            pattern="[a-zA-Z][a-zA-Z\s]*" onblur="validateName(this)"
-                            oninput="validateName(this)" required>
+                            pattern="[a-zA-Z][a-zA-Z\s]*" onblur="validateName(this)" oninput="validateName(this)"
+                            required>
                         <hr />
 
                         <p id="relation_error"></p>
