Some changes done for checkbox

--- a/info.html
+++ b/info.html
@@ -249,8 +249,8 @@
             let pic = profile_pic.slice(12, profile_pic.length);
             // alert(pic);
 
-            const img = document.getElementById('img');
-            img.setAttribute('src', "./img/" + pic);
+            // const img = document.getElementById('img');
+            // img.setAttribute('src', "./img/" + pic);
             // img.setAttribute('src',profile_pic);
 
             document.getElementById("name").value = data.name;
