New validations added on submit event

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
     <section>
+        <marquee behavior="" direction="" onmouseover="this.stop()">Hello</marquee>
         <form method="post" action="./info.html" id="Form">
             <div class="container form">
                 <div class="row">
@@ -252,7 +253,7 @@
 
                         <!-- <input type="button"> -->
                         <hr />
-                        <p id=" hobby_error"></p>
+                        <p id="hobby_error"></p>
                         <br>
                     </div>
                 </div>
