--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <section>
-        <marquee behavior="" direction="" onmouseover="this.stop()">Hello</marquee>
+        <!-- <marquee behavior="" direction="" onmouseover="this.stop()">Hello</marquee> -->
         <form method="post" action="./info.html" id="Form">
             <div class="container form">
                 <div class="row">
@@ -111,9 +111,10 @@
                     </div>
                     <div class="col-md-6">
                         <label for="profile_pic">Profile Picture :</label>
-                        <input type="file" name="profile_pic" id="profile_pic" accept="image/*" required>
+                        <input type="file" name="profile_pic" id="profile_pic" accept="image/*" onchange="viewFile()"
+                            required>
                         <br>
-                        <img alt="" id="img">
+                        <!-- <img alt="" id="img" src="" width="100"> -->
                         <hr />
                         <p id="profile_pic_error"></p>
                         <br>
