Image added in index.html file

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <input type="file" name="profile_pic" id="profile_pic" accept="image/*" onchange="viewFile()"
                             required>
                         <br>
-                        <!-- <img alt="" id="img" src="" width="100"> -->
+                        <img alt="" id="img" src="" width="100">
                         <hr />
                         <p id="profile_pic_error"></p>
                         <br>
